--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
+    "aos": "^2.3.4",
     "core-js": "^3.6.5",
     "sass": "^1.32.8",
     "vue": "^2.6.11",
