--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-multilanguage": "^4.0.10",
     "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
